2009-01-18  Andreas Kirschbaum

	* Implement scripts, scriptkill, and scriptkillall commands.

2008-12-21  Andreas Kirschbaum

	* Suppress nrof display for nrof=1.

	* Fix nrof display in inventory view.

	* Fix display issues with multi-tiled images in fog-of-war mode.

	* Fix display issues with fog-of-war tiles in minimap.

	* Remove memory-sensitve cache for faces. Wastes a few MB of RAM
	but removes reappearing "?" faces.

	* Add default entries to server list to prevent an empty list at
	first start.

	* Ensure minimal height of scroll bar handle.

	* Do not highlight floor as "selected".

	* Make inventory selector more visible.

	* Do not block the GUI while metaserver queries. Regularly update server
	information while server selection GUI is active.

2008-12-19  Andreas Kirschbaum

	* Improve scaling algorithmn for minimap contents.

	* Fix display issues (ghost images) with animated items.

2008-12-07  Andreas Kirschbaum

	* Fix "Arm" stat display.

	* Reduce CPU usage while client is idle on trunk servers.

2008-11-26  Andreas Kirschbaum

	* Fix memory leak when picking up items.

	* Disable output buffering for --debug-protocol and --debug-keyboard
	options.

2008-11-24  Andreas Kirschbaum

	* Implement resolutions 1920x1200 and 2560x1600.

	* Add --debug-keyboard option to log keyboard input.

2008-11-21  Andreas Kirschbaum

	* Do not clear existing information when painting magic map data.

2008-10-26  Andreas Kirschbaum

	* Fix disappearing password dialog issue.

	* Make scroll bar in inventory view work.

2008-10-25  Andreas Kirschbaum

	* Add JUnit archive to project.

2008-09-14  Andreas Kirschbaum

	* Fix crashes in inventory dialog and server selection window due
	to race conditions between GUI and server socket threads.

2008-09-13  Andreas Kirschbaum

	* Do not insert stray repeat count when entering commands with /
	key.

2008-09-06  Andreas Kirschbaum

	* Replace empty faces with arrows in "Click here to see