@@ -68,6 +68,7 @@ public class Commands
         commands.put("scriptkill", new ScriptkillCommand(scriptManager, crossfireServerConnection));
         commands.put("scriptkillall", new ScriptkillallCommand(scriptManager, crossfireServerConnection));
         commands.put("scripts", new ScriptsCommand(scriptManager, crossfireServerConnection));
+        commands.put("scripttell", new ScripttellCommand(scriptManager, crossfireServerConnection));
         commands.put("exec", new ExecCommand(window, crossfireServerConnection));
         commands.put("set", new SetCommand(crossfireServerConnection, optionManager));
     }
