@@ -1,6 +1,7 @@
 2009-01-18  Andreas Kirschbaum
 
-	* Implement scripts, scriptkill, and scriptkillall commands.
+	* Implement scripts, scriptkill, scriptkillall, and scripttell
+	commands.
 
 2008-12-21  Andreas Kirschbaum
 
